--- a/.github/workflows/terraform.yaml
+++ b/.github/workflows/terraform.yaml
@@ -1,10 +1,10 @@
 ---
-name: "Terraform"
+name: Terraform
 
 on:
   push:
     branches:
-      - "main"
+      - main
   pull_request:
 
 permissions:
@@ -12,7 +12,7 @@ permissions:
 
 jobs:
   terraform:
-    name: "Terraform"
+    name: Terraform
     runs-on: ubuntu-latest
 
     # Use the Bash shell regardless whether the GitHub Actions
