--- a/configure/playbooks/roles/setup_xnat_project/tasks/create_owner.yml
+++ b/configure/playbooks/roles/setup_xnat_project/tasks/create_owner.yml
@@ -1,7 +1,7 @@
 ---
 # Create project owner
 # Returns 201 if created, 409 if already exists
-- name: "Create project owner"
+- name: Create project owner
   ansible.builtin.uri:
     url: "{{ web_server.url }}/xapi/users/"
     user: "{{ xnat_service_admin.username }}"
@@ -18,7 +18,9 @@
       verified: true
       enabled: true
     validate_certs: "{{ ssl.validate_certs }}"
-    status_code: [201, 409]
+    status_code:
+      - 201
+      - 409
   register: xnat_create_user
   changed_when: xnat_create_user.status == 201
 
