--- a/configure/playbooks/roles/setup_xnat_project/tasks/main.yml
+++ b/configure/playbooks/roles/setup_xnat_project/tasks/main.yml
@@ -1,15 +1,15 @@
 ---
-- name: "Create investigator if they do not already exist"
+- name: Create investigator if they do not already exist
   ansible.builtin.include_tasks: create_investigator.yml
 
-- name: "Create project if it does not already exist"
+- name: Create project if it does not already exist
   ansible.builtin.include_tasks: create_project.yml
 
-- name: "Create project owner if they do not already exist"
+- name: Create project owner if they do not already exist
   ansible.builtin.include_tasks: create_owner.yml
 
-- name: "Download project data if we do not have a local copy"
+- name: Download project data if we do not have a local copy
   ansible.builtin.include_tasks: download_data.yml
 
-- name: "Upload data to XNAT"
+- name: Upload data to XNAT
   ansible.builtin.include_tasks: upload_data.yml
