Correct links app var names

--- a/.github/workflows/links.yaml
+++ b/.github/workflows/links.yaml
@@ -17,4 +17,4 @@ jobs:
         uses: UCL-MIRSG/.github/actions/links@4695e545829b91dcddc6e36358454bc4a879f751 # v0
         with:
           app-id: ${{ vars.LINKS_APP_ID }}
-          app-pem: ${{ secrets.LINKS_APP_PEM }}
+          app-pem: ${{ secrets.LINKS_PRIVATE_KEY }}
