--- a/configure/playbooks/roles/setup_xnat_project/tasks/download_data.yml
+++ b/configure/playbooks/roles/setup_xnat_project/tasks/download_data.yml
@@ -10,15 +10,17 @@
     url: "{{ xnat_project_data.url }}"
     dest: "{{ xnat_project_data.zip_file }}"
     mode: "0644"
-  register: data_downloaded
+  register: setup_xnat_project_data_downloaded
 
 - name: Check if project data directory exists
   ansible.builtin.stat:
     path: "{{ xnat_project_data.unzip_target }}"
-  register: xnat_project_data_directory
+  register: setup_xnat_project_xnat_project_data_directory
 
 - name: Unzip the data if necessary
-  when: not xnat_project_data_directory.stat.exists or data_downloaded.changed
+  when:
+    not setup_xnat_project_xnat_project_data_directory.stat.exists or
+    setup_xnat_project_data_downloaded.changed
   block:
     - name: Ensure the data directory exists
       ansible.builtin.file:
